examples/environments/deploy/clusters/workload/components/istio-gateway/istio-gateway.gen.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  labels:
    argocd.argoproj.io/instance: istio-gateway
    holos.run/component.name: istio-gateway
  name: default
  namespace: istio-ingress
spec:
  gatewayClassName: istio
  listeners:
  - allowedRoutes:
      namespaces:
        from: Same
    name: http
    port: 80
    protocol: HTTP
  - allowedRoutes:
      namespaces:
        from: Same
    name: https
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - kind: Secret
        name: gateway-cert
      mode: Terminate
